# gemilive

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-js.yml  publish-python.yml
api/: live_routes.py
core/: config.py
docs/: index.html  styles.css
gemilive/: __init__.py  config.py  mount.py  router.py
gemilive-js/: README.md  package-lock.json  package.json
gemilive-js/src/: index.js
sdk/: liveai.js  python_client.py
static/: index.html
