[project]
name = "gemilive"
version = "0.1.1"
description = "Minimal Gemini Live AI WebSocket proxy for FastAPI — plug and play voice + video AI."
readme = "README.md"
requires-python = ">=3.11.*"
license = "MIT"
keywords = ["gemini", "live", "ai", "voice", "video", "fastapi", "websocket"]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "google-genai>=1.70.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]

[tool.setuptools.packages.find]
include = ["gemilive*"]
